--- a/package.json
+++ b/package.json
@@ -19,5 +19,5 @@
     "typeorm": "^0.3.20",
     "typescript": "^5.6.2"
   },
-  "description": ""
+  "description": "Exercicio do curso de desenvolvedor fullstacl utilizando o node.js, express, typescript, typeorm com a ajuda do chatgpt."
 }
